[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluesky-feed-agent"
version = "0.1.0"
description = "LangGraph agent for Bluesky feed summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core LangGraph ecosystem
    "langgraph>=1.0.8", # core library for langraph
    "langgraph-api==0.6.39", # API for interacting or extending langgraph system
    "langgraph-cli>=0.4.11", # command line interface tool to interact with langgraph
    "langsmith>=0.5.2", # Debugging, end-to-end tracing 

    # Core LangChain components 
    "langchain-core>=1.2.5", # Low level foundation(interfaces + LCEL)
    "langchain>=1.2.0", # Higher level utilities like o/p parsers, memory, document processing
    "langchain-community>=0.4.1",#
    "langchain-google-genai>=0.0.1",
    
    "pydantic>=2.0",# Data validation and settings management
    
    "atproto>=0.0.51", # Authenicated Transfer Protocol library
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "edge-tts>=7.0.0",  # Text-to-speech for summary audio
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
